[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/npc/NPCDetails.gd" type="Script" id=1]
[ext_resource path="res://media/texture/npc/portrait/female_young/p(0).jpg" type="Texture" id=2]
[ext_resource path="res://font/VarsityTeam-Bold64.tres" type="DynamicFont" id=3]

[node name="NPCDetails" type="PanelContainer" groups=[
"uiUpdate",
"uiNpcDetails",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0

[node name="PortraitTexture" type="TextureRect" parent="HBoxContainer"]
margin_right = 360.0
margin_bottom = 360.0
rect_min_size = Vector2( 360, 360 )
size_flags_vertical = 0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 364.0
margin_right = 1906.0
margin_bottom = 1066.0
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 1542.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 3 )
text = "No Name"

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 1542.0
margin_bottom = 1018.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TalkButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 1022.0
margin_right = 1542.0
margin_bottom = 1042.0
text = "Talk"

[node name="LeaveButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 1046.0
margin_right = 1542.0
margin_bottom = 1066.0
text = "Leave"
[connection signal="pressed" from="HBoxContainer/VBoxContainer/TalkButton" to="." method="_on_TalkButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/LeaveButton" to="." method="_on_LeaveButton_pressed"]
